kube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  type: ClusterIP
  selector:
    app: web            # cible tous les Pods portant ce label
  ports:
  - port: 80            # port exposé par le Service
    targetPort: 80
